sort.dutchflag.lessons.sort.dutchflag.DutchFlagAlgo.scala.error
DutchFlagAlgo:3: error: not found: value getNombreValeurs
  val n = getNombreValeurs()
          ^DutchFlagAlgo:9: error: not found: value getValeur
    v = getValeur(i)
        ^DutchFlagAlgo:12: error: not found: value getValeur
    while (j>= 0 && !b){if (getValeur(j) > v) {setValeur(j+1,getValeur(j));k = j} else {b = true};j-=1
                            ^DutchFlagAlgo:12: error: not found: value setValeur
    while (j>= 0 && !b){if (getValeur(j) > v) {setValeur(j+1,getValeur(j));k = j} else {b = true};j-=1
                                               ^DutchFlagAlgo:12: error: not found: value getValeur
    while (j>= 0 && !b){if (getValeur(j) > v) {setValeur(j+1,getValeur(j));k = j} else {b = true};j-=1
                                                             ^DutchFlagAlgo:14: error: not found: value setValeur
   setValeur(k,v)
   ^